--- a/week8/backend/index.html
+++ b/week8/backend/index.html
@@ -6,10 +6,10 @@
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
     </style>
     <script>
-        console.log('hello there 👋')
+
     </script>
 </head>
 <body>
-    <h1>Hello! 🖖</h1>
+    <h1>Backend 🖖</h1>
 </body>
 </html>
